deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"kaffeehaus:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"kaffeehaus\")].image"}]'
  name: kaffeehaus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaffeehaus
      version: v1
  template:
    metadata:
      labels:
        app: kaffeehaus
        version: v1
    spec:
      containers:
      - name: kaffeehaus
        image: kaffeehaus:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /q/health
            port: 8080
      restartPolicy: Always
---
