deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kaffeehaus
spec:
  #  host: kaffeehaus.openshift.example.com
  path: /
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: kaffeehaus
    weight: 100
  wildcardPolicy: None
---
